--- a/CareerManagementApp/App.config
+++ b/CareerManagementApp/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+    <add key="SqlServerAddress" value="data source=1803-13-001\sqlexpressver1;initial catalog=CareerManagement_DB;user id=sa;password=furutani-01" />
+    <add key="SystemEmailCCAddress" value="your_email_address" />
+    <add key="ExcelDirectory" value="C:/Users/nguyen-minh-thuan/Desktop/経歴書テンプレート.xls" />
+  </appSettings>
 </configuration>
